# formatter

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  curl_output.yaml  docker-compose.yaml  docker-test.sh  ecosystem.config.js  formatted_output.yaml  formatted_solana_api.yaml  input.txt  output.yaml  readme.md  template.yaml  template_ref_data.yaml  test-script.sh
.github/workflows/: deploy.yml
prompt/: system_prompt.txt  user_prompt.txt
samples/: input.txt  solana_api_documentation.md
src/: extract_yaml.rs  format_yaml_with_ollama.rs  load_prompt.rs  main.rs  models.rs  server-code.rs  yaml_validator.rs
