[package]
name = "ai-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.10.2"
dotenv = "0.15.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
